--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,6 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/font-awesome/css/font-awesome.css",
               "src/assets/vendor/fontawesome-free/css/all.min.css",
@@ -31,11 +30,9 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "./src/assets/vendor/jquery-easing/jquery.easing.min.js",
-              "./src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js",
-              "./src/assets/js/sb-admin-2.min.js",
-              "./src/assets/js/demo/chart-pie-demo.js"
+              "src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js",
+              "src/assets/vendor/jquery-easing/jquery.easing.min.js",
+              "src/assets/js/sb-admin-2.min.js"
             ]
           },
           "configurations": {
