--- a/angular.json
+++ b/angular.json
@@ -26,13 +26,17 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "./node_modules/font-awesome/css/font-awesome.css",
               "src/assets/vendor/fontawesome-free/css/all.min.css",
-              "src/assets/css/sb-admin-2.min.css"
+              "src/assets/css/sb-admin-2.min.css",
+              "./node_modules/bootstrap-select/dist/css/bootstrap-select.min.css",
+              "./node_modules/select2/dist/css/select2.min.css"
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
               "src/assets/vendor/bootstrap/js/bootstrap.bundle.min.js",
               "src/assets/vendor/jquery-easing/jquery.easing.min.js",
-              "src/assets/js/sb-admin-2.min.js"
+              "src/assets/js/sb-admin-2.min.js",
+              "./node_modules/bootstrap-select/dist/js/bootstrap-select.min.js",
+              "./node_modules/select2/dist/js/select2.min.js"
             ]
           },
           "configurations": {
