--- a/package.json
+++ b/package.json
@@ -19,12 +19,18 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/jquery": "^3.3.29",
+    "ajv": "^6.10.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
+    "bootstrap-select": "^1.13.7",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
+    "select2": "^4.0.6-rc.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
