--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@types/jquery": "^3.3.29",
+    "@types/socket.io-client": "^1.4.32",
     "ajv": "^6.10.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.3.1",
@@ -31,6 +32,7 @@
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
     "select2": "^4.0.6-rc.1",
+    "socket.io-client": "^2.2.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
